documentacion/obtenida/ARINC 429/driver and software/LX-AFDX-1/API/AX1W32.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned char BYTE;
typedef unsigned char * LPBYTE;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef unsigned long HVL;
typedef unsigned long HPORT;
typedef unsigned long * LPHPORT;
typedef int BOOL;
typedef int * LPBOOL;
typedef int HCARD;
typedef int ERRVAL;

AX1W32API VOID __stdcall AX1_NormalMant(LPULONG mant,LPINT exp);

AX1W32API ERRVAL __stdcall AX1_ParamGetFrameFreq(LPULONG pconfigval,LPUSHORT ppercent,USHORT netid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_PortConfigEx(ULONG configval,USHORT dstid,USHORT srcid,USHORT depth,USHORT reprate,LPHPORT portptr,HVL hvl,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_PortGetAny(USHORT netid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_PortGetConfig(LPULONG pconfigval,HPORT hport,HCARD handleval);

AX1W32API BOOL __stdcall AX1_PortIsHostRcv(HPORT hport,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_PortSetConfig(ULONG configval,HPORT hport,HCARD handleval);

AX1W32API VOID __stdcall AX1_RAMFill(USHORT value,ULONG addrval,ULONG countval,HCARD handleval);

AX1W32API BYTE __stdcall AX1_RAMRdB(ULONG addrval,HCARD handleval);

AX1W32API ULONG __stdcall AX1_RAMRdL(ULONG addrval,HCARD handleval);

AX1W32API VOID __stdcall AX1_RAMRdsL(LPULONG valueptr,ULONG addrval,INT countval,HCARD handleval);

AX1W32API VOID __stdcall AX1_RAMRdsW(LPUSHORT valueptr,ULONG addrval,INT countval,HCARD handleval);

AX1W32API USHORT __stdcall AX1_RAMRdW(ULONG addrval,HCARD handleval);

AX1W32API VOID __stdcall AX1_RAMWipe(HCARD handleval);

AX1W32API VOID __stdcall AX1_RAMWipeEx(USHORT value,HCARD handleval);

AX1W32API VOID __stdcall AX1_RAMWrB(BYTE value,ULONG addrval,HCARD handleval);

AX1W32API VOID __stdcall AX1_RAMWrL(ULONG value,ULONG addrval,HCARD handleval);

AX1W32API VOID __stdcall AX1_RAMWrsL(LPULONG valueptr,ULONG addrval,INT countval,HCARD handleval);

AX1W32API VOID __stdcall AX1_RAMWrsW(LPUSHORT valueptr,ULONG addrval,INT countval,HCARD handleval);

AX1W32API VOID __stdcall AX1_RAMWrW(USHORT value,ULONG addrval,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RcvHostGetEnable(LPBOOL penableval,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RevArray32(LPBYTE data,ULONG length);

AX1W32API ERRVAL __stdcall AX1_RevWord64(LPBYTE data,ULONG offset);

AX1W32API ERRVAL __stdcall AX1_RPC_CardCheck(HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_CardClean(HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_CardDeviceInfoRd(ULONG index,LPULONG valueptr,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_CardIsRunning(LPBOOL bRunning,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_CardStart(HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_CardStop(HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_DcrRdL(LPULONG data,ULONG addr,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_DcrWrL(ULONG data,ULONG addr,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_DefaultPortConfig(ULONG ctrlflags,USHORT netid,USHORT depth,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_DefaultPortGetHandle(USHORT netid,LPHPORT hport,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_DetectPort(LPUSHORT portnum,HVL hvl,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_DetectVL(LPUSHORT vlid,USHORT netid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_DetectVLIgnore(USHORT vlid,USHORT netid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_DmaParam(ULONG addrh,ULONG addrl,ULONG sizeattr,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_ErrCtrlConfig(ULONG configval,USHORT trigid,HPORT hport,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_ErrCtrlGetConfig(LPULONG pconfigval,LPUSHORT ptrigid,HPORT hport,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_ErrNetEnable(USHORT netid,ULONG configval,USHORT trigid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_ErrNetGetEnable(LPULONG pconfigval,LPUSHORT ptrigid,USHORT netid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_ErrPktConfig(ULONG configval,ULONG blendflags,USHORT trigid,LPBYTE packet,USHORT pktlen,USHORT totallen,HPORT hport,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_ErrPktGetConfig(LPULONG pconfigval,LPULONG pblendflags,HPORT hport,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_ErrPktGetConfigEx(LPULONG pconfigval,LPULONG pblendflags,LPUSHORT ptrigid,LPBYTE packet,USHORT pktlen,LPUSHORT ptotallen,HPORT hport,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_ErrRSNConfig(ULONG configval,USHORT trigid,USHORT modifier,HVL hvl,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_ErrRSNGetConfig(LPULONG pconfigval,LPUSHORT ptrigid,LPINT pmodifier,HVL hvl,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_ErrXmtConfig(ULONG configval,USHORT trigid,HPORT hport,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_ErrXmtGetConfig(LPULONG pconfigval,LPUSHORT ptrigid,HPORT hport,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_EventConfig(ULONG configval,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_EventGetConfig(LPULONG pconfigval,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_FlashClose(HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_FlashErase(ULONG blocknum,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_FlashOpen(HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_FlashRead(LPBYTE buf,ULONG addrval,ULONG length,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_FlashWrite(LPBYTE buf,ULONG addrval,ULONG length,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_FrameGapConfig(ULONG configval,USHORT busnum,USHORT gapval,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_IicRdL(LPVOID data,BYTE devaddr,ULONG count,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_IicWrL(LPVOID data,BYTE devaddr,ULONG count,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_IntTrig(HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_MemRdL(LPULONG data,ULONG addr,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_MemRdsB(ULONG addr,ULONG length,LPBYTE data,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_MemRdsL(ULONG addr,ULONG length,LPULONG data,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_MemWrL(ULONG data,ULONG addr,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_MIBGetNetInfo(USHORT mibtype,USHORT busnum,LPBYTE data,ULONG length,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_MIBGetPortInfo(HPORT hport,LPBYTE data,ULONG length,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_MIBGetVLInfo(HVL hvl,USHORT mibtype,LPBYTE data,ULONG length,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_NetConfig(ULONG configval,USHORT netid,ULONG macconst,USHORT speed,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_RPC_NetFlood(BOOL bEnable,USHORT netid,HCARD handleval);