documentacion/obtenida/ARINC 429/driver and software/LX-AFDX-1/API/AX1W32VB.BAS

Public Declare Sub AX1_NormalMant Lib "AX1W32.DLL" Alias "_AX1_NormalMant@8" (ByRef mant As Long, ByRef exp As Long)
Public Declare Function AX1_ParamGetFrameFreq Lib "AX1W32.DLL" Alias "_AX1_ParamGetFrameFreq@16" (ByRef pconfigval As Long, ByRef ppercent As Integer, ByVal netid As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_PortConfigEx Lib "AX1W32.DLL" Alias "_AX1_PortConfigEx@32" (ByVal configval As Long, ByVal dstid As Integer, ByVal srcid As Integer, ByVal depth As Integer, ByVal reprate As Integer, ByRef portptr As Long, ByVal hvl As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_PortGetAny Lib "AX1W32.DLL" Alias "_AX1_PortGetAny@8" (ByVal netid As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_PortGetConfig Lib "AX1W32.DLL" Alias "_AX1_PortGetConfig@12" (ByRef pconfigval As Long, ByVal hport As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_PortIsHostRcv Lib "AX1W32.DLL" Alias "_AX1_PortIsHostRcv@8" (ByVal hport As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_PortSetConfig Lib "AX1W32.DLL" Alias "_AX1_PortSetConfig@12" (ByVal configval As Long, ByVal hport As Long, ByVal handleval As Long) As Long
Public Declare Sub AX1_RAMFill Lib "AX1W32.DLL" Alias "_AX1_RAMFill@16" (ByVal value As Integer, ByVal addrval As Long, ByVal countval As Long, ByVal handleval As Long)
Public Declare Function AX1_RAMRdB Lib "AX1W32.DLL" Alias "_AX1_RAMRdB@8" (ByVal addrval As Long, ByVal handleval As Long) As Byte
Public Declare Function AX1_RAMRdL Lib "AX1W32.DLL" Alias "_AX1_RAMRdL@8" (ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Sub AX1_RAMRdsL Lib "AX1W32.DLL" Alias "_AX1_RAMRdsL@16" (ByRef valueptr As Long, ByVal addrval As Long, ByVal countval As Long, ByVal handleval As Long)
Public Declare Sub AX1_RAMRdsW Lib "AX1W32.DLL" Alias "_AX1_RAMRdsW@16" (ByRef valueptr As Integer, ByVal addrval As Long, ByVal countval As Long, ByVal handleval As Long)
Public Declare Function AX1_RAMRdW Lib "AX1W32.DLL" Alias "_AX1_RAMRdW@8" (ByVal addrval As Long, ByVal handleval As Long) As Integer
Public Declare Sub AX1_RAMWipe Lib "AX1W32.DLL" Alias "_AX1_RAMWipe@4" (ByVal handleval As Long)
Public Declare Sub AX1_RAMWipeEx Lib "AX1W32.DLL" Alias "_AX1_RAMWipeEx@8" (ByVal value As Integer, ByVal handleval As Long)
Public Declare Sub AX1_RAMWrB Lib "AX1W32.DLL" Alias "_AX1_RAMWrB@12" (ByVal value As Byte, ByVal addrval As Long, ByVal handleval As Long)
Public Declare Sub AX1_RAMWrL Lib "AX1W32.DLL" Alias "_AX1_RAMWrL@12" (ByVal value As Long, ByVal addrval As Long, ByVal handleval As Long)
Public Declare Sub AX1_RAMWrsL Lib "AX1W32.DLL" Alias "_AX1_RAMWrsL@16" (ByRef valueptr As Long, ByVal addrval As Long, ByVal countval As Long, ByVal handleval As Long)
Public Declare Sub AX1_RAMWrsW Lib "AX1W32.DLL" Alias "_AX1_RAMWrsW@16" (ByRef valueptr As Integer, ByVal addrval As Long, ByVal countval As Long, ByVal handleval As Long)
Public Declare Sub AX1_RAMWrW Lib "AX1W32.DLL" Alias "_AX1_RAMWrW@12" (ByVal value As Integer, ByVal addrval As Long, ByVal handleval As Long)
Public Declare Function AX1_RcvHostGetEnable Lib "AX1W32.DLL" Alias "_AX1_RcvHostGetEnable@8" (ByRef penableval As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RevArray32 Lib "AX1W32.DLL" Alias "_AX1_RevArray32@8" (ByRef data As Byte, ByVal length As Long) As Long
Public Declare Function AX1_RevWord64 Lib "AX1W32.DLL" Alias "_AX1_RevWord64@8" (ByRef data As Byte, ByVal offset As Long) As Long
Public Declare Function AX1_RPC_CardCheck Lib "AX1W32.DLL" Alias "_AX1_RPC_CardCheck@4" (ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_CardClean Lib "AX1W32.DLL" Alias "_AX1_RPC_CardClean@4" (ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_CardDeviceInfoRd Lib "AX1W32.DLL" Alias "_AX1_RPC_CardDeviceInfoRd@12" (ByVal index As Long, ByRef valueptr As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_CardIsRunning Lib "AX1W32.DLL" Alias "_AX1_RPC_CardIsRunning@8" (ByRef bRunning As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_CardStart Lib "AX1W32.DLL" Alias "_AX1_RPC_CardStart@4" (ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_CardStop Lib "AX1W32.DLL" Alias "_AX1_RPC_CardStop@4" (ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_DcrRdL Lib "AX1W32.DLL" Alias "_AX1_RPC_DcrRdL@12" (ByRef data As Long, ByVal addr As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_DcrWrL Lib "AX1W32.DLL" Alias "_AX1_RPC_DcrWrL@12" (ByVal data As Long, ByVal addr As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_DefaultPortConfig Lib "AX1W32.DLL" Alias "_AX1_RPC_DefaultPortConfig@16" (ByVal ctrlflags As Long, ByVal netid As Integer, ByVal depth As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_DefaultPortGetHandle Lib "AX1W32.DLL" Alias "_AX1_RPC_DefaultPortGetHandle@12" (ByVal netid As Integer, ByRef hport As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_DetectPort Lib "AX1W32.DLL" Alias "_AX1_RPC_DetectPort@12" (ByRef portnum As Integer, ByVal hvl As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_DetectVL Lib "AX1W32.DLL" Alias "_AX1_RPC_DetectVL@12" (ByRef vlid As Integer, ByVal netid As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_DetectVLIgnore Lib "AX1W32.DLL" Alias "_AX1_RPC_DetectVLIgnore@12" (ByVal vlid As Integer, ByVal netid As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_DmaParam Lib "AX1W32.DLL" Alias "_AX1_RPC_DmaParam@16" (ByVal addrh As Long, ByVal addrl As Long, ByVal sizeattr As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_ErrCtrlConfig Lib "AX1W32.DLL" Alias "_AX1_RPC_ErrCtrlConfig@16" (ByVal configval As Long, ByVal trigid As Integer, ByVal hport As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_ErrCtrlGetConfig Lib "AX1W32.DLL" Alias "_AX1_RPC_ErrCtrlGetConfig@16" (ByRef pconfigval As Long, ByRef ptrigid As Integer, ByVal hport As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_ErrNetEnable Lib "AX1W32.DLL" Alias "_AX1_RPC_ErrNetEnable@16" (ByVal netid As Integer, ByVal configval As Long, ByVal trigid As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_ErrNetGetEnable Lib "AX1W32.DLL" Alias "_AX1_RPC_ErrNetGetEnable@16" (ByRef pconfigval As Long, ByRef ptrigid As Integer, ByVal netid As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_ErrPktConfig Lib "AX1W32.DLL" Alias "_AX1_RPC_ErrPktConfig@32" (ByVal configval As Long, ByVal blendflags As Long, ByVal trigid As Integer, ByRef packet As Byte, ByVal pktlen As Integer, ByVal totallen As Integer, ByVal hport As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_ErrPktGetConfig Lib "AX1W32.DLL" Alias "_AX1_RPC_ErrPktGetConfig@16" (ByRef pconfigval As Long, ByRef pblendflags As Long, ByVal hport As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_ErrPktGetConfigEx Lib "AX1W32.DLL" Alias "_AX1_RPC_ErrPktGetConfigEx@32" (ByRef pconfigval As Long, ByRef pblendflags As Long, ByRef ptrigid As Integer, ByRef packet As Byte, ByVal pktlen As Integer, ByRef ptotallen As Integer, ByVal hport As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_ErrRSNConfig Lib "AX1W32.DLL" Alias "_AX1_RPC_ErrRSNConfig@20" (ByVal configval As Long, ByVal trigid As Integer, ByVal modifier As Integer, ByVal hvl As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_ErrRSNGetConfig Lib "AX1W32.DLL" Alias "_AX1_RPC_ErrRSNGetConfig@20" (ByRef pconfigval As Long, ByRef ptrigid As Integer, ByRef pmodifier As Long, ByVal hvl As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_ErrXmtConfig Lib "AX1W32.DLL" Alias "_AX1_RPC_ErrXmtConfig@16" (ByVal configval As Long, ByVal trigid As Integer, ByVal hport As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_ErrXmtGetConfig Lib "AX1W32.DLL" Alias "_AX1_RPC_ErrXmtGetConfig@16" (ByRef pconfigval As Long, ByRef ptrigid As Integer, ByVal hport As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_EventConfig Lib "AX1W32.DLL" Alias "_AX1_RPC_EventConfig@8" (ByVal configval As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_EventGetConfig Lib "AX1W32.DLL" Alias "_AX1_RPC_EventGetConfig@8" (ByRef pconfigval As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_FlashClose Lib "AX1W32.DLL" Alias "_AX1_RPC_FlashClose@4" (ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_FlashErase Lib "AX1W32.DLL" Alias "_AX1_RPC_FlashErase@8" (ByVal blocknum As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_FlashOpen Lib "AX1W32.DLL" Alias "_AX1_RPC_FlashOpen@4" (ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_FlashRead Lib "AX1W32.DLL" Alias "_AX1_RPC_FlashRead@16" (ByRef buf As Byte, ByVal addrval As Long, ByVal length As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_FlashWrite Lib "AX1W32.DLL" Alias "_AX1_RPC_FlashWrite@16" (ByRef buf As Byte, ByVal addrval As Long, ByVal length As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_FrameGapConfig Lib "AX1W32.DLL" Alias "_AX1_RPC_FrameGapConfig@16" (ByVal configval As Long, ByVal busnum As Integer, ByVal gapval As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_IicRdL Lib "AX1W32.DLL" Alias "_AX1_RPC_IicRdL@16" (ByRef data As Long, ByVal devaddr As Byte, ByVal count As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_IicWrL Lib "AX1W32.DLL" Alias "_AX1_RPC_IicWrL@16" (ByRef data As Long, ByVal devaddr As Byte, ByVal count As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_IntTrig Lib "AX1W32.DLL" Alias "_AX1_RPC_IntTrig@4" (ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_MemRdL Lib "AX1W32.DLL" Alias "_AX1_RPC_MemRdL@12" (ByRef data As Long, ByVal addr As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_MemRdsB Lib "AX1W32.DLL" Alias "_AX1_RPC_MemRdsB@16" (ByVal addr As Long, ByVal length As Long, ByRef data As Byte, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_MemRdsL Lib "AX1W32.DLL" Alias "_AX1_RPC_MemRdsL@16" (ByVal addr As Long, ByVal length As Long, ByRef data As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_MemWrL Lib "AX1W32.DLL" Alias "_AX1_RPC_MemWrL@12" (ByVal data As Long, ByVal addr As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_MIBGetNetInfo Lib "AX1W32.DLL" Alias "_AX1_RPC_MIBGetNetInfo@20" (ByVal mibtype As Integer, ByVal busnum As Integer, ByRef data As Byte, ByVal length As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_MIBGetPortInfo Lib "AX1W32.DLL" Alias "_AX1_RPC_MIBGetPortInfo@16" (ByVal hport As Long, ByRef data As Byte, ByVal length As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_MIBGetVLInfo Lib "AX1W32.DLL" Alias "_AX1_RPC_MIBGetVLInfo@20" (ByVal hvl As Long, ByVal mibtype As Integer, ByRef data As Byte, ByVal length As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_NetConfig Lib "AX1W32.DLL" Alias "_AX1_RPC_NetConfig@20" (ByVal configval As Long, ByVal netid As Integer, ByVal macconst As Long, ByVal speed As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_RPC_NetFlood Lib "AX1W32.DLL" Alias "_AX1_RPC_NetFlood@12" (ByVal bEnable As Long, ByVal netid As Integer, ByVal handleval As Long) As Long
